EOD HD replace URL with HttpRequest